--- a/templates/text_annotation.html
+++ b/templates/text_annotation.html
@@ -36,7 +36,7 @@
                 </header>
                 <div class="panel-body">
                     <div align="center">
-                            <textarea rows="5" cols="150" placeholder="">{{ current_text }}</textarea>
+                            <textarea rows="5" cols="120" placeholder="" style="font-size: 15px">{{ current_text }}</textarea>
                     </div>
                     <form name="text" method="post" action="/display_text/">
                         {% csrf_token %}
@@ -81,7 +81,8 @@
                                 <thead>
                                 <tr align="center" class="text-danger">
                                     <th align="center" width="200px" class="text-center" style="font-size: 16px">实体</th>
-                                    <th align="center" width="200px" class="text-center" style="font-size: 16px">实体类型</th>
+                                    <th align="center" width="200px" class="text-center" style="font-size: 16px">实体类型
+                                    <th align="center" width="250" class="text-center" style="font-size: 16px">用户操作</th>
                                 </tr>
                                 </thead>
                                 <tbody id="tb">
@@ -89,6 +90,13 @@
                                     <tr>
                                         <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ key }}</td>
                                         <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ value }}</td>
+                                        <td class="text-center">
+                                        <a href="{% url 'deleteDictionary' %}?entity={{ key }}">
+                                            <button class="btn btn-danger" type="button" onclick="return confirm('是否确认删除？');">
+                                                <span class="glyphicon glyphicon-remove" aria-hidden="true"></span> Delete
+                                            </button>
+                                        </a>
+                                    </td>
                                     </tr>
                                     </tbody>
                                 {% endfor %}
@@ -131,7 +139,6 @@
                             <tbody id="tb">
                             {% for list in resultList %}
                                 <tr>
-
                                     <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ list.headEntity }}</td>
                                     <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ list.headEntityType }}</td>
                                     <td align="center" style="display:table-cell; vertical-align:middle; font-size: 15px">{{ list.tailEntity }}</td>
@@ -181,6 +188,8 @@
         {% endfor %}
     </script>
 {% endif %}
+
+
 <!-- 模态框（Modal） 修改-->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -266,7 +275,7 @@
                 </h4>
             </div>
             <div class="modal-body">
-                <form id="modifyTemp" class="form-horizontal" action="/addTemp/" method="post">
+                <form id="addTemp" class="form-horizontal" action="/addTemp/" method="post">
                     {% csrf_token %}
                     <div class="form-group">
                         <label for="headEntity" class="col-sm-2 control-label">头实体：</label>
@@ -330,19 +339,18 @@
                 </h4>
             </div>
 
-
             <div class="modal-body">
-                <form id="modifyTemp" class="form-horizontal" action="/addDictionary/" method="post">
+                <form id="addDictionary" class="form-horizontal" action="/addDictionary/" method="post">
                     {% csrf_token %}
                     <div class="form-group">
-                        <label for="headEntity" class="col-sm-2 control-label">实体：</label>
+                        <label for="entity" class="col-sm-2 control-label">实体：</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="entity" name="entity" placeholder="entity"
                                    required="required">
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="headEntityType" class="col-sm-2 control-label">实体类型：</label>
+                        <label for="entity_type" class="col-sm-2 control-label">实体类型：</label>
                         <div class="col-sm-10">
                             <input type="text" class="form-control" id="entity_type" name="entity_type"
                                    placeholder="entity_type" required="required">
@@ -354,10 +362,10 @@
                     </div>
                 </form>
             </div>
-
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
+
 
 <script type="text/javascript" src="/static/js/jquery.min.js"></script>
 <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
