--- a/templates/home.html
+++ b/templates/home.html
@@ -79,180 +79,180 @@
     </div>
 
 
-        <script src="/static/js/jquery-1.8.3.min.js"></script>
-        {% if searchResult %}
-            <script type="text/javascript">
-                var searchResult ={{searchResult|safe}}
-                //echarts 数据
-                var data = [];
-                var links = [];
+    <script src="/static/js/jquery-1.8.3.min.js"></script>
+    <script src="/static/js/echarts.js"></script>
+    {% if searchResult %}
+    <script type="text/javascript">
+        var searchResult ={{searchResult|safe}}
+        //echarts 数据
+        var data = [];
+        var links = [];
 
-                //构造展示的数据
-                var maxDisPlayNode = 15;
-                var id = 0;
-                for (var i = 0; id < Math.min(maxDisPlayNode, searchResult.length) && i < searchResult.length; i++) {
-                    //获取node1
-                    node1 = {};
-                    node1['name'] = searchResult[i]['n1']['name'];
-                    node1['draggable'] = true;
-                    if ('url' in searchResult[i]['n1']) {
-                        node1['category'] = 1;
-                    } else {
-                        node1['category'] = 2;
-                    }
-                    var flag = 1;
+        //构造展示的数据
+        var maxDisPlayNode = 100;
+        var id = 0;
+        for (var i = 0; id <= Math.min(maxDisPlayNode, searchResult.length) && i <= searchResult.length; i++) {
+            //获取node1
+            node1 = {};
+            node1['name'] = searchResult[i]['n1']['name'];
+            node1['draggable'] = true;
+            if ('url' in searchResult[i]['n1']) {
+                node1['category'] = 1;
+            } else {
+                node1['category'] = 2;
+            }
+            var flag = 1;
 
-                    relationTarget = id.toString();
-                    for (var j = 0; j < data.length; j++) {
-                        if (data[j]['name'] === node1['name']) {
-                            flag = 0;
-                            relationTarget = data[j]['id'];
-                            break;
-                        }
-                    }
-
-                    node1['id'] = relationTarget;
-                    if (flag === 1) {
-                        id++;
-                        data.push(node1);
-                    }
-
-                    //获取node2
-                    node2 = {};
-                    node2['name'] = searchResult[i]['n2']['name'];
-                    node2['draggable'] = true;
-                    if ('url' in searchResult[i]['n2']) {
-                        node2['category'] = 1;
-                    } else {
-                        node2['category'] = 2;
-                    }
-                    flag = 1;
-                    relationTarget = id.toString();
-                    for (var j = 0; j < data.length; j++) {
-                        if (data[j]['name'] === node2['name']) {
-                            flag = 0;
-                            relationTarget = data[j]['id'];
-                            break;
-                        }
-                    }
-                    node2['id'] = relationTarget;
-                    if (flag === 1) {
-                        id++;
-                        data.push(node2);
-                    }
-
-                    //获取relation
-                    relation = {};
-                    relation['source'] = node1['id'];
-                    relation['target'] = node2['id'];
-                    relation['category'] = 0;
-                    flag = 1;
-                    for (var j = 0; j < links.length; j++) {
-                        if (links[j]['source'] == relation['source'] && links[j]['target'] == relation['target']) {
-                            links[j]['value'] = links[j]['value'] + searchResult[i]['rel']['type'];
-                            flag = 0;
-                            break;
-                        }
-                    }
-                    if (flag === 1) {
-                        relation['value'] = searchResult[i]['rel']['type'];
-                        relation['symbolSize'] = 10;
-                        links.push(relation);
-                    }
-
+            relationTarget = id.toString();
+            for (var j = 0; j < data.length; j++) {
+                if (data[j]['name'] === node1['name']) {
+                    flag = 0;
+                    relationTarget = data[j]['id'];
+                    break;
                 }
+            }
+
+            node1['id'] = relationTarget;
+            if (flag === 1) {
+                id++;
+                data.push(node1);
+            }
+
+            //获取node2
+            node2 = {};
+            node2['name'] = searchResult[i]['n2']['name'];
+            node2['draggable'] = true;
+            if ('url' in searchResult[i]['n2']) {
+                node2['category'] = 1;
+            } else {
+                node2['category'] = 2;
+            }
+            flag = 1;
+            relationTarget = id.toString();
+            for (var j = 0; j < data.length; j++) {
+                if (data[j]['name'] === node2['name']) {
+                    flag = 0;
+                    relationTarget = data[j]['id'];
+                    break;
+                }
+            }
+            node2['id'] = relationTarget;
+            if (flag === 1) {
+                id++;
+                data.push(node2);
+            }
+
+            //获取relation
+            relation = {};
+            relation['source'] = node1['id'];
+            relation['target'] = node2['id'];
+            relation['category'] = 0;
+            flag = 1;
+            for (var j = 0; j < links.length; j++) {
+                if (links[j]['source'] == relation['source'] && links[j]['target'] == relation['target']) {
+                    links[j]['value'] = links[j]['value'] + searchResult[i]['rel']['type'];
+                    flag = 0;
+                    break;
+                }
+            }
+            if (flag === 1) {
+                relation['value'] = searchResult[i]['rel']['type'];
+                relation['symbolSize'] = 10;
+                links.push(relation);
+            }
+
+        }
 
 
-                // Echarts初始化设置
-                var myChart = echarts.init(document.getElementById('graph'));
+        // Echarts初始化设置
+        var myChart = echarts.init(document.getElementById('graph'));
 
-                option = {
-                    title: {
-                        text: ''
+        option = {
+            title: {
+                text: ''
+            },
+            tooltip: {},
+            animationDurationUpdate: 1500,
+            animationEasingUpdate: 'quinticInOut',
+            label: {
+                normal: {
+                    show: true,
+                    textStyle: {
+                        fontSize: 12
                     },
-                    tooltip: {},
-                    animationDurationUpdate: 1500,
-                    animationEasingUpdate: 'quinticInOut',
+                }
+            },
+            legend: {
+                x: "center",
+                show: false
+            },
+            series: [
+
+                {
+                    type: 'graph',
+                    layout: 'force',
+                    symbolSize: 45,
+                    focusNodeAdjacency: true,
+                    roam: true,
+                    edgeSymbol: ['none', 'arrow'],
+                    categories: [{
+                        name: '查询实体',
+                        itemStyle: {
+                            normal: {
+                                color: "#009800",
+                            }
+                        }
+                    }, {
+                        name: 'Bank',
+                        itemStyle: {
+                            normal: {
+                                color: "#4592FF",
+                            }
+                        }
+                    }, {
+                        name: 'Serise',
+                        itemStyle: {
+                            normal: {
+                                color: "#C71585",
+                            }
+                        }
+                    }],
                     label: {
                         normal: {
                             show: true,
                             textStyle: {
-                                fontSize: 12
+                                fontSize: 12,
                             },
                         }
                     },
-                    legend: {
-                        x: "center",
-                        show: false
+                    force: {
+                        repulsion: 1000
                     },
-                    series: [
-
-                        {
-                            type: 'graph',
-                            layout: 'force',
-                            symbolSize: 45,
-                            focusNodeAdjacency: true,
-                            roam: true,
-                            edgeSymbol: ['none', 'arrow'],
-                            categories: [{
-                                name: '查询实体',
-                                itemStyle: {
-                                    normal: {
-                                        color: "#009800",
-                                    }
-                                }
-                            }, {
-                                name: 'Bank',
-                                itemStyle: {
-                                    normal: {
-                                        color: "#4592FF",
-                                    }
-                                }
-                            }, {
-                                name: 'Serise',
-                                itemStyle: {
-                                    normal: {
-                                        color: "#C71585",
-                                    }
-                                }
-                            }],
-                            label: {
-                                normal: {
-                                    show: true,
-                                    textStyle: {
-                                        fontSize: 12,
-                                    },
-                                }
+                    edgeSymbolSize: [4, 50],
+                    edgeLabel: {
+                        normal: {
+                            show: true,
+                            textStyle: {
+                                fontSize: 10
                             },
-                            force: {
-                                repulsion: 1000
-                            },
-                            edgeSymbolSize: [4, 50],
-                            edgeLabel: {
-                                normal: {
-                                    show: true,
-                                    textStyle: {
-                                        fontSize: 10
-                                    },
-                                    formatter: "{c}"
-                                }
-                            },
-                            data: data,
-                            links: links,
-                            lineStyle: {
-                                normal: {
-                                    opacity: 0.9,
-                                    width: 1.3,
-                                    curveness: 0,
-                                    color: "#262626",
-                                }
-                            }
+                            formatter: "{c}"
                         }
-                    ]
-                };
-                // 使用刚指定的配置项和数据显示图表。
-                myChart.setOption(option);
-
-            </script>
-        {% endif %}
+                    },
+                    data: data,
+                    links: links,
+                    lineStyle: {
+                        normal: {
+                            opacity: 0.9,
+                            width: 1.3,
+                            curveness: 0,
+                            color: "#262626",
+                        }
+                    }
+                }
+            ]
+        };
+        // 使用刚指定的配置项和数据显示图表。
+        myChart.setOption(option);
+    </script>
+    {% endif %}
 {% endblock en %}
