第六次修改（添加实体查询模块）

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,13 @@
                     </li>
 
                     <li>
+                        <a href="http://127.0.0.1:8001/toEntitySearch/">
+                            <i class="icon_balance"></i>
+                            <span style="font-size:22px;">实体查询</span>
+                        </a>
+                    </li>
+
+                    <li>
                         <a class="" href="#">
                             <i class="icon_bag_alt"></i>
                             <span style="font-size:22px;">关系抽取</span>
