--- a/templates/relation_search.html
+++ b/templates/relation_search.html
@@ -164,7 +164,7 @@
                             aria-hidden="true">×
                     </button>
                     <h4 class="modal-title" id="myModalLabel" style="font-size:20px;">
-                        Modify Annotation Information
+                        Modify Relation Information
                     </h4>
                 </div>
                 <div class="modal-body">
