第八次修改（增加实体抽取测试页面、规范urls文件命名）

--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
                     </li>
 
                     <li>
-                        <a href="http://127.0.0.1:8001/toEntity/">
+                        <a href="http://127.0.0.1:8001/toEntityRecognition/">
                             <i class=" social_googledrive"></i>
                             <span style="font-size:22px;">实体识别</span>
                         </a>
@@ -83,14 +83,14 @@
                     </li>
 
                     <li>
-                        <a class="" href="#">
+                        <a class="" href="http://127.0.0.1:8001/toRelationeExtract/">
                             <i class="icon_bag_alt"></i>
                             <span style="font-size:22px;">关系抽取</span>
                         </a>
                     </li>
 
                     <li>
-                        <a class="" href="http://127.0.0.1:8001/toRelation/">
+                        <a class="" href="http://127.0.0.1:8001/toRelationSearch/">
                             <i class="icon_chat_alt"></i>
                             <span style="font-size:22px;">关系查询</span>
                         </a>
