--- a/templates/text_annotation.html
+++ b/templates/text_annotation.html
@@ -36,6 +36,7 @@
                 </header>
                 <div class="panel-body">
                     <div align="center">
+                        <h3>当前用户还剩<span style="color: #00cc00">{{ count }}</span>条数据未标注！</h3>
                             <textarea rows="5" cols="120" placeholder="" style="font-size: 15px">{{ current_text }}</textarea>
                     </div>
                     <form name="text" method="post" action="/display_text/">
