第十一次修改

--- a/templates/entity_search.html
+++ b/templates/entity_search.html
@@ -33,7 +33,7 @@
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <header class="panel-heading">
-                        查询条件：
+                        查询条件（可支持模糊查询）：
                     </header>
                     <div class="panel-body">
 
