第十五次修改（拆分d2rq）

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,6 +62,12 @@
                     </li>
 
                     <li>
+                        <a href="http://127.0.0.1:8001/toD2rq/">
+                            <i class="icon_piechart"></i>
+                            <span style="font-size:22px;">D2rq管理</span>
+                        </a>
+                    </li>
+                    <li>
                         <a href="http://127.0.0.1:8001/toAnnotation/">
                             <i class="icon_genius"></i>
                             <span style="font-size:22px;">文本标注</span>
