第十六次修改（修复插入节点重复等BUG）

--- a/templates/index.html
+++ b/templates/index.html
@@ -63,7 +63,7 @@
 
                     <li>
                         <a href="http://127.0.0.1:8001/toD2rq/">
-                            <i class="icon_piechart"></i>
+                            <i class="icon_bag"></i>
                             <span style="font-size:22px;">D2rq管理</span>
                         </a>
                     </li>
