第十七次修改（拆改文本标注界面）

--- a/templates/help.html
+++ b/templates/help.html
@@ -41,7 +41,8 @@
                         Python 3.6版本以上（Anaconda内置python）<br>
                         Neo4j 3.5.18<br>
                         MySql 5.6版本以上<br>
-                        Python库：dj_pagination，py2neo==4.1.0，Django>=1.11.7
+                        Python库：dj_pagination，py2neo==4.1.0，Django>=1.11.7，
+                            <br>cx_Oracle（参考：https://blog.csdn.net/zhu940923/article/details/81172968）
                     </div>
                 </div>
             </div>
