--- a/templates/relation_search.html
+++ b/templates/relation_search.html
@@ -9,10 +9,15 @@
     <link href="/static/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="/static/css/bootstrap.css"/>
     <link rel="stylesheet" href="/static/css/style2.css"/>
+    <link rel="stylesheet" href="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/css/bootstrap.min.css">
 
     <script type="text/javascript" src="/static/js/jquery.min.js"></script>
     <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/echarts.common.min.js"></script>
+
+    <script src="http://cdn.static.runoob.com/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="http://cdn.static.runoob.com/libs/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts-all-3.js"></script>
 </head>
 <title>关系</title>
     <div class="container">
@@ -393,4 +398,5 @@
 
 	});
 </script>
+    </div>
 {% endblock en %}
