--- a/templates/d2rq.html
+++ b/templates/d2rq.html
@@ -31,7 +31,145 @@
                     <li><i class="fa fa-link" aria-hidden="true"></i>D2rq管理</li>
                 </ol>
             </div>
+            {% if tableList == null and database == null %}
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <header class="panel-heading">
+                        选择待抽取的数据库管理系统：
+                    </header>
+                    <div class="panel-body">
+                        <form name="commitDatabase" method="post" action="/commitDatabase/">
+                            {% csrf_token %}
+                            <div class="input-append">
+                                <select name="database" id="database" class="form-control"
+                                        style="float: left; width: 300px">
+                                        <option value="MySQL">MySQL</option>
+                                        <option value="Oracle">Oracle</option>
+                                </select>
+                                <button type="submit"
+                                        style="background-color:#7abaff; width: 116px;height: 36px; text-align: center; margin-left: 200px"
+                                        name="upload">确认选择
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+            {% if database and tableList == null %}
+            <div class="col-md-12">
+                <div class="panel panel-default">
+                    <header class="panel-heading">
+                        填写数据库连接配置：
+                    </header>
+                    <div class="panel-body">
+                        <form name="commitConfiguration" method="post" action="/commitConfiguration/">
+                            {% csrf_token %}
+                            {% if database == "MySQL" %}
+                            <div class="form-group" style="align-self: center">
+                                <label class="col-sm-3 control-label">数据库IP：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入IP" name="host"
+                                           value="127.0.0.1">
+                                </div>
+                            </div>
+                                <br>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">端口号：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入端口号" name="port"
+                                           value=3306>
+                                </div>
+                             </div>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">用户名：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入用户名" name="username"
+                                           value="root">
+                                </div>
+                             </div>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">密码：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入密码" name="password"
+                                           value="root">
+                                </div>
+                             </div>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">数据库名：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入数据库名" name="db_name"
+                                           value="source">
+                                </div>
+                            </div>
+                                {% elif database == 'Oracle' %}
+                                <div class="form-group">
+                                <label class="col-sm-3 control-label">数据库IP：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入IP" name="host"
+                                           value="127.0.0.1">
+                                </div>
+                            </div>
+                                <br>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">端口号：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入端口号" name="port"
+                                           value=1521>
+                                </div>
+                             </div>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">用户名：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入用户名" name="username"
+                                           value="root">
+                                </div>
+                             </div>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">密码：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入密码" name="password"
+                                           value="root">
+                                </div>
+                             </div>
+                                <br>
+                                <br>
+                             <div class="form-group">
+                                <label class="col-sm-3 control-label">服务名：</label>
+                                <div class="col-sm-3">
+                                    <input class="form-control" type="text" placeholder="请输入服务名" name="db_name"
+                                           value="orcl">
+                                </div>
+                            </div>
 
+                            {% endif %}
+                            <br>
+                                <br>
+                            <button type="submit"
+                                style="background-color:#00aced; width: 116px;height: 36px; text-align: center; margin-left: 500px"
+                                name="upload">提交配置
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+            {% endif %}
+
+            {% if tableList %}
             <div class="col-md-12">
                 <div class="panel panel-default">
                     <header class="panel-heading">
@@ -43,17 +181,17 @@
                             <div class="input-append">
                                 <select name="databaseTable" id="databaseTable" class="form-control"
                                         style="float: left; width: 300px">
-                                    <option value="{{ table }}">{{ table }}</option>
                                     {% for list in tableList %}
                                         <option value="{{ list }}">{{ list }}</option>
                                     {% endfor %}
                                 </select>
                                 <button type="submit"
-                                        style="background-color:#00aced; width: 116px;height: 36px; text-align: center; margin-left: 200px"
+                                        style="background-color:#4cd964; width: 116px;height: 36px; text-align: center; margin-left: 200px"
                                         name="upload">确认选择
                                 </button>
                             </div>
                         </form>
+                    <br>
                         <form name="d2neo4j" method="post" action="/d2neo4j/">
                             {% csrf_token %}
                             <div class="input-append">
@@ -120,7 +258,7 @@
                             {% endif %}
 
                             <button type="submit"
-                                    style="background-color: #7abaff; width: 116px;height: 36px; text-align: center;margin-left: 500px"
+                                    style="background-color: #00A8B3; width: 116px;height: 36px; text-align: center;margin-left: 500px"
                                     name="upload">开始抽取
                             </button>
                         </form>
@@ -128,6 +266,7 @@
                     </div>
                 </div>
             </div>
+            {% endif %}
 
 
             <div class="footers">
