第十八次修改（部分实现实体识别界面）

--- a/templates/entity_search.html
+++ b/templates/entity_search.html
@@ -42,7 +42,7 @@
                             {% csrf_token %}
                             <div id="entity1" class="form-group" style="padding: 2%; margin: 0 auto;">
                                 <input type="text" id="entity1_text" name="entity1_text" class="form-control"
-                                       placeholder="实体１" aria-describedby="basic-addon1" value="{{ entity1 }}" style="width:600px;margin-left: 100px">
+                                       placeholder="实体名称" aria-describedby="basic-addon1" value="{{ entity1 }}" style="width:600px;margin-left: 100px">
                             </div>
                             <div class="btn-group" style="padding: 2%">
                                 <button type="submit" id="btnSearch" class="btn btn-primary">Search</button>
